--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express.js": "^1.0.0",
-    "nodemon": "^2.0.20"
+    "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0"
   }
 }
