--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express.js": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "slugify": "^1.6.5"
   }
 }
