--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express.js": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "slugify": "^1.6.5"
