--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.4.2",
