--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express.js": "^1.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.20",
-    "pg": "^8.8.0",
-    "slugify": "^1.6.5"
-  }
+    "devDependencies": {
+        "@types/express": "^4.17.14",
+        "@types/jest": "^29.2.3",
+        "@types/node": "^18.11.9",
+        "@typescript-eslint/parser": "^5.45.0",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/morgan": "^1.9.3",
+        "@types/pg": "^8.6.5"
+
+    },
+    "scripts": {
+        "start": "node ./dist/index.js",
+        "tsc": "tsc",
+        "postinstall": "npm run tsc",
+        "dev": "ts-node-dev — respawn — pretty — transpile-only index.ts"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "express.js": "^1.0.0",
+        "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.20",
+        "pg": "^8.8.0",
+        "slugify": "^1.6.5"
+    }
 }
