--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,13 @@
     "devDependencies": {
         "@types/express": "^4.17.14",
         "@types/jest": "^29.2.3",
-        "@types/node": "^18.11.9",
-        "@typescript-eslint/parser": "^5.45.0",
-        "ts-node": "^10.9.1",
-        "ts-node-dev": "^2.0.0",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
-        "@types/pg": "^8.6.5"
-
+        "@types/node": "^18.15.11",
+        "@types/pg": "^8.6.5",
+        "@typescript-eslint/parser": "^5.45.0",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0"
     },
     "scripts": {
         "start": "node ./dist/index.js",
