--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,9 @@ jobs:
       - uses: DerYeger/yarn-setup-action@v1.0.1
         with:
           node-version: 16
-      - run: cd backend
+      - run: cd frontend
       - run: yarn install
-      - run: cd ../frontend
+      - run: cd ../backend
       - run: yarn install
       
     
