--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -32,5 +32,5 @@ jobs:
           host: ${{ secrets.AWS_EC2_HOST }}
           username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-          source: backend/dist
+          source: "backend/dist/app.js,backend/dist/controllers,backend/dist/middleware,backend/dist/routes"
           target: /var/www/html/api/
