--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -22,12 +22,8 @@ jobs:
           cd backend
           yarn install
 
-      - name: Configure SSH key
-        uses: webfactory/ssh-agent@v0.7.0
-        with: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-
       - name: Deploy Backend to AWS EC2
-        uses: appleboy/scp-action@v0.1.4 
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.AWS_EC2_HOST }}
           username: ${{ secrets.AWS_EC2_USERNAME }}
