--- a/.github/workflows/build_frontend.yml
+++ b/.github/workflows/build_frontend.yml
@@ -28,12 +28,8 @@ jobs:
           yarn install
           yarn build
 
-      - name: Configure SSH key
-        uses: webfactory/ssh-agent@v0.7.0
-        with: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-
       - name: Deploy Frontend to AWS EC2
-        uses: appleboy/scp-action@v0.1.4
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.AWS_EC2_HOST }}
           username: ${{ secrets.AWS_EC2_USERNAME }}
