--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -4,6 +4,7 @@ on:
       - main
     paths:
       - backend
+      - .github/workflows/build_backend.yml
       
 jobs:
   build:
@@ -22,11 +23,16 @@ jobs:
           cd backend
           yarn install
 
+      - name: Configure SSH key
+        uses: webfactory/ssh-agent@v0.7.0
+        with: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+
       - name: Deploy Backend to AWS EC2
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.4 
         with:
           host: ${{ secrets.AWS_EC2_HOST }}
           username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-          source: "backend/dist/app.js,backend/dist/controllers,backend/dist/middleware,backend/dist/routes"
+          source: backend/dist/*
           target: /var/www/html/api/
+          command: sudo scp -r
