--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -29,6 +29,5 @@ jobs:
           host: ${{ secrets.AWS_EC2_HOST }}
           username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-          source: backend/dist/*
+          source: api
           target: /var/www/html/api/
-          command: sudo scp -r
