moving package.json as well

--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -25,9 +25,11 @@ jobs:
 
       - name: Deploy Backend to AWS EC2
         uses: appleboy/scp-action@v0.1.4 
+        run: |
+          cd backend
         with:
           host: ${{ secrets.AWS_EC2_HOST }}
           username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-          source: api
-          target: /var/www/html/
+          source: package.json
+          target: /var/www/html/api
