--- a/.github/workflows/build_backend.yml
+++ b/.github/workflows/build_backend.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
     paths:
-      - backend
+      - 'backend/**/*'
       - .github/workflows/build_backend.yml
       
 jobs:
